# newt

./: Cargo.toml  TODO.txt
src/: lib.rs  main.rs
src/bodies/: body.rs  body2.rs  body3.rs  mod.rs  shape.rs
src/data/configs/: 10k.json  1k.json  run1.json  test.json
src/data/test/: input.json
src/examples/: test.json
src/geom/: mod.rs  point.rs  vec.rs  vector.rs  vector2.rs  vector3.rs
src/physics/: constants.rs  gravity.rs  mod.rs
src/sim/: config.rs  geom.rs  mod.rs  simul.rs  simulation.rs  system.rs  test.rs  world.rs
src/sim/geom/: mod.rs  vec3.rs  vec3x4.rs
src/sim/system/: scalar.rs  simd.rs
src/sim/test/: test_geom.rs  test_read_save.rs
src/sim_old/: config.rs  geom.rs  simulation.rs
src/sim_old/test/: mod.rs  test_geom.rs  test_read_save.rs
