[package]
name = "newt"
version = "0.1.0"
edition = "2021"

[dependencies.bevy]
version = "0.14.2"
default-features = false
features = [
  "bevy_render",        # Rendering framework core
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_text",          # Text/font rendering
  "bevy_ui",            # UI toolkit
]
